--- a/S4/sexyinputs/package.json
+++ b/S4/sexyinputs/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "cleave.js": "^1.6.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.1"
